@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	
-	<modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-<parent>
+  <modelVersion>4.0.0</modelVersion>
+
+  <parent>
     <artifactId>parent</artifactId>
     <groupId>sense.concordia.java.deepclone</groupId>
     <version>1.0.0-SNAPSHOT</version>
@@ -16,43 +14,28 @@
   <version>1.0.0-SNAPSHOT</version>
   <packaging>eclipse-test-plugin</packaging>
   <properties>
+    <ui.test.vmargs.all>-Xms1024m -Xmx8192m</ui.test.vmargs.all>
+    <ui.test.vmargs.mac>-XstartOnFirstThread</ui.test.vmargs.mac>
+    <ui.test.vmargs>${ui.test.vmargs.all}</ui.test.vmargs>
+
     <testSuite>${project.artifactId}</testSuite>
     <testClass>sense.concordia.java.deepclone.tests.CloneDetectionTest</testClass>
   </properties>
 
-  	<profiles>
-		<profile>
-			<id>macosx</id>
-			<activation>
-				<os>
-					<name>mac os x</name>
-					<family>mac</family>
-				</os>
-			</activation>
-			<properties>
-				<ui.test.vmargs>${tycho.testArgLine} -XstartOnFirstThread -ea
-					-Dosgi.requiredJavaVersion=1.8 -XX:MaxPermSize=256m -Xms1024m
-					-Xmx8192m</ui.test.vmargs>
-				<argLine>${ui.test.vmargs}</argLine>
-			</properties>
-		</profile>
-		<profile>
-			<id>other-os</id>
-			<activation>
-				<os>
-					<name>not-mac</name>
-					<family>!mac</family>
-				</os>
-			</activation>
-			<properties>
-				<ui.test.vmargs>${tycho.testArgLine} -ea
-					-Dosgi.requiredJavaVersion=1.8 -XX:MaxPermSize=256m -Xms1024m
-					-Xmx8192m</ui.test.vmargs>
-				<argLine>${ui.test.vmargs}</argLine>
-			</properties>
-		</profile>
-	</profiles>
-  
+  <profiles>
+    <profile>
+      <id>mac-customization</id>
+      <activation>
+        <os>
+          <family>mac</family>
+        </os>
+      </activation>
+      <properties>
+        <ui.test.vmargs>${ui.test.vmargs.all} ${ui.test.vmargs.mac}</ui.test.vmargs>
+      </properties>
+    </profile>
+  </profiles>
+
   <build>
     <plugins>
       <plugin>
@@ -62,6 +45,7 @@
         <configuration>
           <useUIHarness>true</useUIHarness>
           <useUIThread>true</useUIThread>
+          <argLine>${ui.test.vmargs}</argLine>
           <explodedBundles>
             <bundle>org.junit</bundle>
           </explodedBundles>
@@ -71,7 +55,8 @@
               <artifactId>org.eclipse.equinox.event</artifactId>
               <version>0.0.0</version>
             </dependency>
-            <dependency> <!-- For PullUpTests18 -->
+            <dependency>
+              <!-- For PullUpTests18 -->
               <type>eclipse-plugin</type>
               <artifactId>org.eclipse.jdt.annotation</artifactId>
               <version>[2.0.0,3.0.0)</version>
